--- a/Regressione Polinomiale.ipynb
+++ b/Regressione Polinomiale.ipynb
@@ -132,7 +132,7 @@
    "id": "4ff2b006",
    "metadata": {},
    "source": [
-    "## Creiamo features polinomiali dalle feature di partenza, degree ci permette creare tuttte le feature fino al grado desiderato (1, x1, x2, x1^2, x1*x2, x2^2), dopo di che con queste features creiamo la matrice polinomiali corrispondente"
+    "## Creiamo features polinomiali dalle feature di partenza, degree ci permette creare tutte le features fino al grado desiderato (1, x1, x2, x1^2, x1*x2, x2^2), dopo di che con queste features creiamo la matrice polinomiali corrispondente"
    ]
   },
   {
